Remove unused vendored AAF code, add pyaaf2 dep, embed-by-default: CLI+GUI; add test fixtures and self-contained tests; update PyInstaller hidden imports

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,12 @@
 # Optional dependencies for enhanced functionality:
 # (Currently not used, but listed for future enhancements)
 
-# pyaaf2>=1.6.0          # For full AAF binary format support (future)
+# pyaaf2 is required; module is imported as "aaf2"
+pyaaf2>=1.6.0           # For AAF read/write support
 # lxml>=4.6.0            # For enhanced XML processing (future)  
 # colorama>=0.4.4        # For colored terminal output (future)
 
 # Development dependencies:
-# pytest>=6.0.0          # For testing
+pytest>=6.0.0          # For testing
 # black>=21.0.0          # For code formatting
 # flake8>=3.8.0          # For linting
