--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
           pip install -r requirements.txt
           python -m pip install pyinstaller
 
+      - name: Clean previous builds
+        run: |
+          rm -rf dist build *.spec
+
       - name: Build app (PyInstaller using spec file)
         run: |
           cd packaging
@@ -58,6 +62,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m pip install pyinstaller
+
+      - name: Clean previous builds
+        run: |
+          if exist dist rmdir /s /q dist
+          if exist build rmdir /s /q build
+          if exist *.spec del /q *.spec
 
       - name: Syntax check
         run: |
