CI: fix Windows clean step syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
           python -m pip install pyinstaller
 
       - name: Clean previous builds
+        shell: pwsh
         run: |
-          if exist dist rmdir /s /q dist
-          if exist build rmdir /s /q build
+          if (Test-Path dist) { Remove-Item -Recurse -Force dist }
+          if (Test-Path build) { Remove-Item -Recurse -Force build }
 
       - name: Syntax check
         run: |
