--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,19 @@ jobs:
         with:
           python-version: '3.14'
 
+      - name: Extract version
+        id: get_version
+        shell: pwsh
+        run: |
+          $content = Get-Content _version.py -Raw
+          if ($content -match '__version__\s*=\s*[''\"]([^''\"]+)[''\"]') {
+            $version = $matches[1]
+            "version=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          }
+          else {
+            Write-Error "Unable to parse version from _version.py"
+          }
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -42,14 +55,16 @@ jobs:
         shell: pwsh
         run: |
           cd dist
-          Compress-Archive -Path 'WAVsToAAF.exe' -DestinationPath 'WAVsToAAF-Windows-v1.0.0.zip'
+          $version = "${{ steps.get_version.outputs.version }}"
+          Copy-Item ../docs/README_windows.md README_windows.md
+          Compress-Archive -Path 'WAVsToAAF.exe','README_windows.md' -DestinationPath "WAVsToAAF_v$version.zip"
           Get-ChildItem -Force
 
       - name: Upload zip package
         uses: actions/upload-artifact@v4
         with:
-          name: windows-zip
-          path: dist/WAVsToAAF-Windows-v1.0.0.zip
+          name: WAVsToAAF_v${{ steps.get_version.outputs.version }}
+          path: dist/WAVsToAAF_v${{ steps.get_version.outputs.version }}.zip
 
       - name: Upload exe
         uses: actions/upload-artifact@v4
