Add dynamic version info to Mac and Windows builds
- Mac: Add version extraction and Info.plist configuration to WAVsToAAF.spec
- Mac: Fix grep command in build_mac.sh for macOS compatibility
- Windows: Add generate_version_info.py script for Windows EXE metadata
- Windows: Update build workflow to generate version info before build
- Windows: Update spec file to use version_info.txt for EXE properties
- Both builds now programmatically use version from _version.py
- Windows zip artifact already named WAVsToAAF_v{version}.zip

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,10 @@ jobs:
         run: |
           python -m py_compile wav_to_aaf.py
 
+      - name: Generate Windows version info
+        run: |
+          python packaging/generate_version_info.py
+
       - name: Build exe (PyInstaller using spec file)
         run: |
           pyinstaller packaging/WAVsToAAF-Windows.spec
