Fix artifact upload to zip the app folder directly for consistent extraction

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: WAVsToAAF_v${{ steps.get_version.outputs.version }}
-          path: dist/WAVsToAAF_v${{ steps.get_version.outputs.version }}.zip
+          path: dist/WAVsToAAF
 
       - name: Validate Windows build
         shell: cmd
