--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Upload zip package
         uses: actions/upload-artifact@v4
         with:
-          name: WAVsToAAF
+          name: WAVsToAAF_v${{ steps.get_version.outputs.version }}
           path: dist/WAVsToAAF
 
       - name: Validate Windows build
